first page of cpt3 and minor stuff on the rest

--- a/Cpt1_intro_QuantumGases.tex
+++ b/Cpt1_intro_QuantumGases.tex
@@ -9,7 +9,6 @@
 \section{Why cold atoms?}%colder than the empty universe
 %Introduction on the cold atoms field, historically from the MOT to the BEC to the superfluid BEC-BCS crossover. From the first dipolar \ac{BEC} to supersolids to the \ac{mBEC}.
 
-The words opening this chapter were written by Albert Michelson, in the annual report of the university of Chicago, for the year 1896
 
 Right at the turn of the 20th century 
 
@@ -30,4 +29,9 @@ BEC-BCS crossover here
 
 Describe why mass imbalance and some description of the result obtained with other mixtures and describe why Dy-K is our choice 
 
+
+Zaccanti's varenna notes have a lot of good reference on this
+
 \section{Our choice: Dy-K }
+
+Explorative experimentm, first lanthanide+alkali
