--- a/Cpt3_DyK_intro.tex
+++ b/Cpt3_DyK_intro.tex
@@ -1,9 +1,22 @@
 \chapter{D\lowercase{y}K experiment}
 \section{Overview}
-\ac{ODT}
+
+While ultracold atoms laboratories are in general on the technically heavy side of table-top experiments, the Dy-K machine is a challenging set up even for the standards of the community. While recently the flourishing of ultracold atomic experiments where new, controlled, complexity is added, mostly in the form of \ac{QGM}, use to selectively control individual atoms in lattices or projecting arbitrary potential. The Dy-K set up, while focusing on bulk physics in harmonic traps, proves to be a cumbersome at times.
+ For example, a standard ultracold experiment working with an alkali atom in a bulk system, typically uses one or two lasers resonant with the D2 and D1 lines for cooling, in the \ac{MOT} and grey molasses stages, and one or two high power infrared beam for trapping and evaporative cooling. Working with an heteronuclear mixture requires additional resonant laser sources for the different transitions of the various atomic species \albi{cite}. Moreover, lanthanides atoms like dysprosium, erbium, europium \albi{cite} present a richer electronic structure, which can be used to produce colder sub-\unit{\micro\K} atomic samples before evaporative cooling, as is the case in the Dy-K experiment. \albi{this part to be reduced a bit}
+ 
+ When I joined the team at the end of 2021, the experiment was already fully operational. Many results regarding the mixture \cite{Ravensbergen2018ado, Ravensbergen2018poa, Ravensbergen2020rif}, possible upgrades \cite{Kreyer2021mot} and limitations \cite{Soave2022lff} were already successfully obtained. Here, I will summarize the procedure developed in the years to obtained the doubly-degenerate Fermi mixture and in the next section describe the results that mostly concern this thesis, i.e.\, the investigation of the interspecies interaction in the mixture.
+ 
+As mentioned before, in our experiment we use the fermionic isotope of dysprosium $^{161}$Dy, combined with the only fermionic isotope of potassium, $^{40}$K. We employ an all optical approach to produce a deeply degenerate mixture. The first phase of every experimental sequence is the sequential loading of the two \ac{MOT} in a crossed \ac{ODT}
+ 
+  
 
 
-\section{Feshbach resonance in Dy-K}
+ universal dipolar scattering for cooling
+
+
+%Due to the intrinsic explorative nature of our experiment, at times, we had aligned on the mixture up to nine infrared beams used for trapping, combined this with two sets of \ac{MOT} beams and two set of molasses beam
+
+\section{Feshbach resonances in Dy-K}
 
 
 
