--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -155,7 +155,7 @@
 \makesavenoteenv{tabular}
 \makesavenoteenv{table}
 
-
+\newcommand{\albi}{\textcolor{green}}
 
 
 % ****************************************************************************************************
