--- a/Cpt2_FeshbachRes.tex
+++ b/Cpt2_FeshbachRes.tex
@@ -1,5 +1,8 @@
 \chapter{Scattering theory and Feshbach resonances}
+\section{Basis of scattering theory}
 
-\section{Two-body scattering theory}
+
+
+
 
 \section{Feshbach resonances in ultracold gases}
