Changed order chapter progress Experiment section

--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -97,6 +97,7 @@
 \label{pt:questDyKFR}
 \include{Chapters/Cpt3_DyK_intro}
 \include{Chapters/Chapter_pub1}
+\include{Chapters/Chapter_pub3}
 \include{Chapters/Cpt5_DyK_feshbachplus}
 
 
@@ -106,10 +107,9 @@
 \include{Chapters/Chapter_pub2}
 
 
-\part{When atoms collide a lot: Hydrodynamic crossover}
-\label{pt:Hydrodynamic}
+%\part{When atoms collide a lot: Hydrodynamic crossover}
+%\label{pt:Hydrodynamic}
 
-\include{Chapters/Chapter_pub3}
 
 % ********************************************************************
 % Backmatter
