--- a/Cpt3_DyK_intro.tex
+++ b/Cpt3_DyK_intro.tex
@@ -15,22 +15,29 @@ Once potassium is trapped in the reservoir \ac{ODT}, the preparation of the Dy c
 Before the evaporative cooling stage, necessary to reach the degenerate regime, Dy undergoes an additional resonant cooling\footnote{This additional stage was implemented in the experiment before I joined the team, but reported for the first time in the publication \cite{Ye2022ool}, which is part of this thesis as chapter \ref{Chpt:Lowfieldpaper}.}, performed near the narrow transition at \SI{741}{nm}, with linewidth $\Gamma_{741}/2\pi\sim\,\SI{1.7}{kHz}$ \cite{Lu2011soa}. \albi{maybe there is something regarding the 626 cooling in Paris?} We perform this cooling stage after transferring the atomic clouds in an elongated \ac{ODT}. Thanks to this cooling stage, we manage to reach temperatures around \SI{1}{\micro K} with the Dy cloud. After the cooling stage the mixture is loaded in another cross-\ac{ODT}, also generated at \SI{1064}{nm}\footnote{Mephisto MOPA $18$ NE}, where evaporative cooling takes place. More details on the narrow-line cooling sequence are reported in Sec. \ref{sec:appB}. It is worth noticing here that, while as reported in \cite{Ye2022ool} no effect of the \SI{741}{nm} light are observed on the potassium component, the rapid change in the trap configuration from the reservoir to the elongated configuration strongly affects the potassium cloud, which loses a sizeable amount of atoms. This, as I will discuss soon, does not strictly affect the efficiency of the evaporative cooling, and as not been a limiting factor in most of the experiments presented in this thesis, but reduces  the tunability of the potassium atom number. This limitation and possible solutions are also discussed in Chapter \albi{one of the concluding chapters}.
 %sequential loading of the two \ac{MOT}s in a crossed \ac{ODT}. We first  
  
-Evaporative cooling in a fermionic experiment requires some extra tricks compared to a bosonic system. The lack of interaction between identical particles prevent the realization of evaporative cooling in a single component atomic cloud. The most 
+ \albi{probably all of this nice thing on evaporative cooling and Dipolar scattering is better in why Dy-K}
+Evaporative cooling in a fermionic experiment requires some extra tricks compared to a bosonic system. The lack of interaction between identical particles prevent the realization of evaporative cooling in a single component atomic cloud. In the early years of ultracold fermionic quantum matter two approaches were successfull in cooling to degeneracy an atomic could. The method developed by the group of Debbie Jin at JILA consisted in evaporative cool a bosonic rubidium cloud while sympathetic cooling a sample of fermionic potassium atoms. Thje
+
+The two main approaches are to either use an another atomic species for which efficient evaporative cooling 
 
 
-sysmpathtic cooling for K, with either rubidium \albi{cita Jin et al} and Li has prove very successful \albi{felikx}, despite the wrong mass ration of the two clouds. This approach has been also very successful in the more exotic mixture of Li and Cr, despite requiring an extra step (Feshbach cooling) to achieve complete thermalization. The large dipole moment of highly magnetic atoms like Er and Dy
+sysmpathtic cooling for K, with either rubidium \albi{cita Jin et al} and 
 
 
+Li has prove very successful \albi{felikx}, despite the wrong mass ration of the two clouds. This approach has been also very successful in the more exotic mixture of Li and Cr, despite requiring an extra step (Feshbach cooling) to achieve complete thermalization. 
 
-
-
-to facilitate 
- At the end of the \SI{741}{nm} cooling stage, the atomic mixture is trapped in a crossed \ac{ODT} generated at \SI{1064}{nm}. In standard fermionic experiments, evaporative cooling is performed between two spin states of the same atomic species, in order to allow for the interaction necessary for rethermalization. In other heteronuclear fermionic mixture like the LiK  and LiCr experiments,  the typical procedure is to perform evaporative cooling of one of the species, lithium in particular, in two spin states, while the other atomic specie is sympathetic cooled to degeneracy. With highly magnetic atoms, like Dy and Er, quantum degeneracy can be reached in a single spin state, thanks to the \albi{so-called} universal dipolar scattering.
+The large dipole moment of highly magnetic atoms like Er and Dy
+ 
+ 
+  In standard fermionic experiments, evaporative cooling is performed between two spin states of the same atomic species, in order to allow for the interaction necessary for rethermalization. 
+  
+  In other heteronuclear fermionic mixture like the LiK  and LiCr experiments,  the typical procedure is to perform evaporative cooling of one of the species, lithium in particular, in two spin states, while the other atomic specie is sympathetic cooled to degeneracy. With highly magnetic atoms, like Dy and Er, quantum degeneracy can be reached in a single spin state, thanks to universal dipolar scattering
  
  
  In the Dy-K experiment, thanks to the large dipole moment of Dy
  
- 
+ to facilitate 
+ At the end of the \SI{741}{nm} cooling stage, the atomic mixture is trapped in a crossed \ac{ODT} generated at \SI{1064}{nm}.
  we can perform evaporative cooling with both species in a single spin state, 
  To facilitate the thermalization process, this trap is formed by two tightly focused beams, an horizontal one with waist \SI{25}{\micro m}, and  a vertical one focused to a waist of \SI{60}{\micro m}. 
  
