two new chapters created, bib fix, progress DyK intro

--- a/Chapter_pub1.tex
+++ b/Chapter_pub1.tex
@@ -45,7 +45,7 @@ Exciting research avenues in the field of quantum gases rely on the possibility 
 Ultracold heteronuclear Fermi-Fermi mixtures have so far been produced in the laboratory using four different combinations of fermionic atoms: $^6$Li-$^{40}$K~\cite{Taglieber2008qdt,Wille2008eau,Voigt2009uhf,Naik2011fri},
 $^6$Li-$^{173}$Yb~\cite{Hara2011qdm,Green2020fri},
 $^{161}$Dy-$^{40}$K~\cite{Ravensbergen2018poa,Ravensbergen2020rif}, and
-$^{6}$Li-$^{53}$Cr~\cite{Neri2020roa,Ciamei2022euc,Ciamei2022DDF}.
+$^{6}$Li-$^{53}$Cr~\cite{Neri2020roa,Ciamei2022euc,Ciamei2022ddf}.
 Feshbach resonances have been found in all these combinations, but (with one exception~\cite{Ravensbergen2020rif}) they all turned out to be quite narrow. On the practical side, this limits the possibility of accurate experimental interaction tuning. On a more fundamental side, the narrowness imposes severe limitations to universal behavior in the resonance region~\cite{Chin2010fri} and thus also compromises the great benefit of fermionic loss suppression in a strongly interacting fermion mixture~\cite{Petrov2004wbd,Petrov2005dmi,Jag2016lof}.
 The only exception is a rather broad resonance that we recently identified in the Dy-K mixture at a field of 217\,G~\cite{Ravensbergen2020rif}. Its experimental application, however, turned out to be challenging because of complications owing to the exceptionally rich structure of both Dy-K interspecies and Dy intraspecies resonances, which lead to a complex behavior of inelastic losses~\cite{Burdick2016lls,Soave2022lff}. This has motivated our search for alternative Feshbach resonances in the Dy-K system.
 
