--- a/Chapter_pub3.tex
+++ b/Chapter_pub3.tex
@@ -46,7 +46,7 @@ To our best knowledge, five different two-species fermion mixtures have been rea
 $^{6}$Li-$^{40}$K~\cite{Taglieber2008qdt, Wille2008eau, Voigt2009uhf,
 	Trenkwalder2011heo, Naik2011fri},
 $^{161}$Dy-$^{40}$K~\cite{Ravensbergen2018poa,Ravensbergen2020rif, Ye2022ool, Soave2023otf}, 
-$^{6}$Li-$^{53}$Cr~\cite{Neri2020roa, Ciamei2022euc, Ciamei2022bddf, Finelli2024ula}, 
+$^{6}$Li-$^{53}$Cr~\cite{Neri2020roa, Ciamei2022euc, Ciamei2022ddf, Finelli2024ula}, 
 $^{6}$Li-$^{167}$Er~\cite{Schafer2023oof} and 
 $^{6}$Li-$^{173}$Yb~\cite{Hara2011qdm, Green2020fri}.
 Among these mixtures the Dy-K system features a unique combination of favorable properties. It is rather straightforward to cool the mixture deep into the doubly degenerate regime, following standard procedures of laser cooling and trapping and subsequent evaporative cooling \cite{Ravensbergen2018poa}. The mixture features an ample spectrum of interspecies Feshbach resonances in the lowest spin channel, which is immune against two-body losses. The observed resonances include a broad one centered at a magnetic field of 217\,G \cite{Ravensbergen2020rif} and a bunch of low-field Feshbach resonances \cite{Ye2022ool} below 10\,G. As a particularly interesting candidate for interaction tuning and molecule formation we have {identified} a resonance near 7.3\,G \cite{Ye2022ool, Soave2023otf}. {
