--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -46,7 +46,7 @@
 %********************************************************************
 % Bibliographies
 %*******************************************************
-\addbibresource{ultracold.bib}
+\addbibresource{ultracold.bib, newbibthesis.bib}
 %\addbibresource[label=ownpubs]{AMiede_Publications.bib}
 
 %********************************************************************
@@ -109,8 +109,10 @@
 
 %\part{When atoms collide a lot: Hydrodynamic crossover}
 %\label{pt:Hydrodynamic}
-
-
+\part{Conclusions}
+\label{pt:End}
+\include{Chapters/Cpt_conclusion1}
+\include{Chapters/Cpt_conclusion2}
 % ********************************************************************
 % Backmatter
 %*******************************************************
