--- a/Cpt1_intro_QuantumGases.tex
+++ b/Cpt1_intro_QuantumGases.tex
@@ -35,3 +35,24 @@ Zaccanti's varenna notes have a lot of good reference on this
 \section{Our choice: Dy-K }
 
 Explorative experimentm, first lanthanide+alkali
+
+
+
+
+ \albi{This works in explaining another advantage (or difference) that comes with using Dy}
+Evaporative cooling in a fermionic experiment requires some extra tricks compared to a bosonic system. The lack of interaction between identical particles prevent the realization of evaporative cooling in a single component atomic cloud. In the early years of ultracold fermionic quantum matter two approaches were successfull in cooling to degeneracy an atomic could. The method developed by the group of Debbie Jin at JILA consisted in evaporative cool a bosonic rubidium cloud while sympathetic cooling a sample of fermionic potassium atoms. Thje
+
+The two main approaches are to either use an another atomic species for which efficient evaporative cooling 
+
+
+sysmpathtic cooling for K, with either rubidium \albi{cita Jin et al} and 
+
+
+Li has prove very successful \albi{felikx}, despite the wrong mass ration of the two clouds. This approach has been also very successful in the more exotic mixture of Li and Cr, despite requiring an extra step (Feshbach cooling) to achieve complete thermalization. 
+
+The large dipole moment of highly magnetic atoms like Er and Dy
+
+
+In standard fermionic experiments, evaporative cooling is performed between two spin states of the same atomic species, in order to allow for the interaction necessary for rethermalization. 
+
+In other heteronuclear fermionic mixture like the LiK  and LiCr experiments,  the typical procedure is to perform evaporative cooling of one of the species, lithium in particular, in two spin states, while the other atomic specie is sympathetic cooled to degeneracy. With highly magnetic atoms, like Dy and Er, quantum degeneracy can be reached in a single spin state, thanks to universal dipolar scattering
