--- a/ultracold.bib
+++ b/ultracold.bib
@@ -23686,7 +23686,7 @@ and Windpassinger, Patrick},
   publisher = {American Physical Society},
 }
 
-@Article{Ciamei2022bddf,
+@Article{Ciamei2022ddf,
   author    = {Ciamei, A. and Finelli, S. and Cosco, A. and Inguscio, M. and Trenkwalder, A. and Zaccanti, M.},
   journal   = {Phys. Rev. A},
   title     = {{Double-degenerate Fermi mixtures of $^{6}\mathrm{Li}$ and $^{53}\mathrm{Cr}$ atoms}},
@@ -24898,6 +24898,21 @@ and Windpassinger, Patrick},
 	eprint        = {2501.09618},
 	primaryclass  = {cond-mat.quant-gas},
 	url           = {https://arxiv.org/abs/2501.09618},
+}
+
+@Article{Krstajic2025cot,
+	title = {Characterization of three-body loss in $^{166}\mathrm{Er}$ and optimized production of large Bose-Einstein condensates},
+	author = {Krstaji\'{c}, Milan and Juh\'asz, P\'eter and Ku\v{c}era, Ji\v{r}\'{\i} and Hofer, Lucas R. and Lamb, Gavin and Marchant, Anna L. and Smith, Robert P.},
+	journal = {Phys. Rev. A},
+	volume = {108},
+	issue = {6},
+	pages = {063301},
+	numpages = {7},
+	year = {2023},
+	month = {Dec},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevA.108.063301},
+	url = {https://link.aps.org/doi/10.1103/PhysRevA.108.063301}
 }
 
 
